mobile overflow issue fixed

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -153,6 +153,7 @@
   .header {
     padding-bottom: 65px;
     width: auto;
+      overflow-x: hidden;
   }
 
   .header-title-img {
